2006-09-18  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/common/gstreamer.py:
	Actually make get_plugin_version return a tuple of integers
	not strings.

2006-09-16  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/manager/manager.py:
	Fix comment parameter ordering.

2006-09-14  Michael Smith  <msmith@fluendo.com>

	* flumotion/component/consumers/httpstreamer/http.py:
	* flumotion/component/consumers/httpstreamer/http.xml:
	  Add burst-size property, in kB.
	  When set, use this to configure streamers using new multifdsink
	  burst modes.

2006-09-14  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/common/gstreamer.py:
	Make get_plugin_version return a tuple not a string.  Make nano
	non-optional in the return value.
	* flumotion/component/feedcomponent010.py:
	Use fixed get_plugin_version.
	* flumotion/component/muxers/checks.py:
	Use fixed get_plugin_version.
	* flumotion/worker/checks/encoder.py:
	Use fixed get_plugin_version.

2006-09-14  Michael Smith  <msmith@fluendo.com>

	* flumotion/admin/command/commands.py:
	* flumotion/admin/command/main.py:
	  Allow vararg commands, use for invoke.

2006-09-14  Andy Wingo  <wingo@pobox.com>

	* flumotion/admin/command/commands.py (_parse_typed_args): New
	exciting typed args parser.
	(do_invoke): Use the args parser to allow e.g. "invoke
	/default/foo fooCommand is(ss) 4 foo bar baz", which will do a
	componentCallRemote on /default/foo with the args (4, 'foo',
	('bar', 'baz')).

2006-09-14  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/feedcomponent010.py:
	Add event probe to each gdpdepay's src pad to filter subsequent
	new segment events.  This worksaround bugs in gdp's handling
	of 2nd (and after) newsegment events with changed caps after.
	This fixes issues with reconnection to upstream components that
	have been re-started

2006-09-13  Zaheer Abbas Merali  <zaheerabbas at merali dot org>
